tm: menu fix dark mode

--- a/assets/css/v20Style_d.less
+++ b/assets/css/v20Style_d.less
@@ -329,11 +329,14 @@ input {
     line-height: 24px;
     border-radius: 12px;
     color:@darkModeText !important;
-    z-index: 20;
+    //z-index: 10;
     &:hover{
         background:@highlightColor;
     }
 }
+.front{
+    z-index: 2;
+  }
 
 @keyframes loader-rotation {
     0%   {transform: rotate(0deg)}
@@ -865,6 +868,7 @@ transform: translateX(12px);
         position: relative;
         background: darken(@basetextColor, 15%);
         border:1px solid lighten(black, 27%);
+        z-index: 0;
         color: @darkModeText;
         img.vct-client-logo {
             height: 42px;
